--- a/src/main/resources/GUI.fxml
+++ b/src/main/resources/GUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -9,23 +10,33 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="vbox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="454.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="vbox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="363.0" prefWidth="395.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="42.0" layoutY="29.0" prefHeight="343.0" prefWidth="370.0" style="-fx-padding: 10; -fx-border-style: solid inside; -fx-border-width: 2; -fx-border-insets: 5; -fx-border-radius: 5; -fx-border-color: orange;">
+      <VBox layoutX="13.0" layoutY="10.0" prefHeight="343.0" prefWidth="370.0" style="-fx-padding: 10; -fx-border-style: solid inside; -fx-border-width: 4; -fx-border-insets: 5; -fx-border-radius: 5; -fx-border-color: orange;">
          <children>
             <Label contentDisplay="CENTER" prefHeight="30.0" prefWidth="138.0" text="How can I help you?" textOverrun="CLIP">
                <rotationAxis>
                   <Point3D />
                </rotationAxis>
-            </Label>
-            <TextField fx:id="inputText" prefHeight="35.0" prefWidth="336.0" />
-            <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#printOutput" prefHeight="35.0" prefWidth="97.0" text="Send" textAlignment="CENTER">
                <font>
-                  <Font name="Source Code Pro Black Italic" size="13.0" />
+                  <Font size="14.0" />
                </font>
-            </Button>
-            <Label contentDisplay="CENTER" prefHeight="45.0" prefWidth="91.0" text="Here you go:" textOverrun="CLIP" />
-            <TextArea fx:id="outputText" prefHeight="166.0" prefWidth="336.0" wrapText="true" />
+            </Label>
+            <TextField fx:id="inputText" onAction="#respond" prefHeight="35.0" prefWidth="336.0" />
+            <ButtonBar prefHeight="47.0" prefWidth="336.0">
+              <buttons>
+                <Button fx:id="enterBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#respond" prefHeight="30.0" prefWidth="94.0" style="-fx-background-color: #ffb35c;" text="Enter" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+              </buttons>
+            </ButtonBar>
+            <Label contentDisplay="CENTER" prefHeight="37.0" prefWidth="91.0" text="Here you go:" textOverrun="CLIP">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <TextArea fx:id="outputText" editable="false" prefHeight="166.0" prefWidth="336.0" wrapText="true" />
          </children>
       </VBox>
    </children>
