--- a/src/main/resources/AssistantMessenger.fxml
+++ b/src/main/resources/AssistantMessenger.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -56,11 +57,11 @@
             </Menu>
          </menus>
       </MenuBar>
-      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="550.0" prefWidth="683.0" style="-fx-background-color: linear-gradient(to top, #4481eb 0%, #04befe 100%);;">
+      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="550.0" prefWidth="683.0">
          <children>
-            <ScrollPane fx:id="container" hbarPolicy="NEVER" layoutX="177.0" layoutY="72.0" prefHeight="400.0" prefWidth="521.0" vbarPolicy="ALWAYS">
+            <ScrollPane fx:id="container" hbarPolicy="NEVER" layoutX="177.0" layoutY="72.0" pannable="true" prefHeight="400.0" prefWidth="521.0" vbarPolicy="ALWAYS">
                <content>
-                  <VBox fx:id="chatBox" prefHeight="398.0" prefWidth="505.0" />
+                  <VBox fx:id="chatBox" prefHeight="393.0" prefWidth="496.0" />
                </content>
             </ScrollPane>
             <Pane layoutX="177.0" prefHeight="72.0" prefWidth="521.0" style="-fx-background-color: #122b41;" AnchorPane.rightAnchor="0.0">
@@ -143,7 +144,11 @@
                   </HBox>
                   <HBox prefHeight="228.0" prefWidth="177.0" style="-fx-background-color: #122b41;">
                      <children>
-                        <Pane prefHeight="200.0" prefWidth="200.0" />
+                        <Pane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <JFXSpinner layoutX="7.0" layoutY="89.0" prefHeight="50.0" prefWidth="163.0" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                </children>
