--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -1,30 +1,32 @@
-.user-chat-bubble {
+.chat-bubble {
     -fx-background-radius: 20px;
-    -fx-background-color: #4089ff;
     -fx-padding: 8;
+    -fx-font-family: Arial, Helvetica, sans-serif;
+    -fx-font-size: 14px;
+}
+.chat-bubble.user {
+    -fx-background-color: #4089ff;
     -fx-text-fill: "#ffffff";
 }
 
-.response-chat-bubble {
-    -fx-background-radius: 20px;
+.chat-bubble.response {
     -fx-background-color: #e1e2e3;
-    -fx-padding: 8;
     -fx-text-fill: "#000000";
 }
 
 
 /* Scroll bar css found on https://stackoverflow.com/questions/48048943/javafx-8-scroll-bar-css/48050208 */
 .scroll-bar:horizontal .track,
-.scroll-bar:vertical .track{
-    -fx-background-color :transparent;
-    -fx-border-color :transparent;
+.scroll-bar:vertical .track {
+    -fx-background-color : transparent;
+    -fx-border-color : transparent;
     -fx-background-radius : 0.0em;
-    -fx-border-radius :2.0em;
+    -fx-border-radius : 2.0em;
 }
 
 .scroll-bar:horizontal .increment-button ,
 .scroll-bar:horizontal .decrement-button {
-    -fx-background-color :transparent;
+    -fx-background-color : transparent;
     -fx-background-radius : 0.0em;
     -fx-padding :0.0 0.0 10.0 0.0;
 
@@ -32,34 +34,34 @@
 
 .scroll-bar:vertical .increment-button ,
 .scroll-bar:vertical .decrement-button {
-    -fx-background-color :transparent;
+    -fx-background-color : transparent;
     -fx-background-radius : 0.0em;
     -fx-padding :0.0 10.0 0.0 0.0;
 
 }
 
  .scroll-bar .increment-arrow,
- .scroll-bar .decrement-arrow{
+ .scroll-bar .decrement-arrow {
     -fx-shape : " ";    
     -fx-padding :0.15em 0.0;
 }
 
  .scroll-bar:vertical .increment-arrow,
- .scroll-bar:vertical .decrement-arrow{
+ .scroll-bar:vertical .decrement-arrow {
     -fx-shape : " ";    
     -fx-padding :0.0 0.15em;
 }
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-    -fx-background-color :derive(black,90.0%);
+    -fx-background-color : derive(black,90.0%);
     -fx-background-insets : 2.0, 0.0, 0.0;
     -fx-background-radius : 2.0em;
 }
 
 .scroll-bar:horizontal .thumb:hover,
 .scroll-bar:vertical .thumb:hover {
-    -fx-background-color :derive(#4D4C4F,10.0%);
+    -fx-background-color : derive(#4D4C4F,10.0%);
     -fx-background-insets : 2.0, 0.0, 0.0;
     -fx-background-radius : 2.0em;
 }
